[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "autopep8",
  "matplotlib",
  "pandas",
  "pettingzoo[butterfly]",
  "pyglet",
  "python-utils",
  "spinup",
  "scipy",
  "stable_baselines3>=1.6.0",
  "SuperSuit",
  "torch",
  "xvfbwrapper",
]
name = "cartpole-algorithms"
version = "0.0.1"
