[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "autopep8",
  "matplotlib",
  "mypy",
  "pandas",
  "pettingzoo[butterfly]",
  "pycodestyle",
  "pyglet",
  "pytest",
  "python-utils",
  "scipy",
  "spinup",
  "stable_baselines3>=1.6.0",
  "SuperSuit",
  "torch",
  "xvfbwrapper",
]
name = "cartpole-algorithms"
version = "0.0.1"
